Moved 'security' folder into the configuration section and refactored code